--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ bleach==3.3.0
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+chart-studio==1.1.0
 cycler==0.10.0
 decorator==5.0.9
 defusedxml==0.7.1
@@ -51,6 +52,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.2.0
+plotly==4.14.3
 prometheus-client==0.11.0
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
@@ -64,6 +66,7 @@ pyzmq==22.1.0
 qtconsole==5.1.0
 QtPy==1.9.0
 requests==2.25.1
+retrying==1.3.3
 Send2Trash==1.5.0
 simplejson==3.17.2
 six==1.16.0
